# sigma-system-overview

./: .gitignore  .gitmodules  ARCHITECTURE.md  INTERFACES.md  LICENSE  README.md  SETUP.md  SVB_Risk_Analysis_Jan2023.md  check-freshness.sh  make-release.sh  setup-project.sh  setup.sh  validate-docs.sh
.github/workflows/: integration-test.yml  update-submodules.yml
agent-infrastructure/: settings.json
agent-infrastructure/agents/: SIGMA-COMM-SPEC.md  _template.md  code-quality-analyst.md  cognitive-decision-scientist.md  cross-model-validator.md  devils-advocate.md  economics-analyst.md  energy-market-analyst.md  geopolitical-strategist.md  implementation-engineer.md  loan-ops-tech-specialist.md  m-and-a-deal-counsel.md  macro-rates-analyst.md  portfolio-analyst.md  product-designer.md  product-strategist.md  reference-class-analyst.md  (+16 more)
case-study/: REVIEW-6-WALKTHROUGH.md
hateoas-agent/: .gitignore  LICENSE  README.md  pyproject.toml
hateoas-agent/.claude/: launch.json
hateoas-agent/.github/workflows/: ci.yml
hateoas-agent/examples/: comparison_flat_vs_hateoas.py  database_admin.py  database_admin_api.py  multi_resource.py  orders_action_centric.py  orders_declarative.py  orders_discovery.py  orders_mcp.py  orders_persistence.py  orders_resource.py  orders_visualization.py  orders_with_guards.py
hateoas-agent/src/hateoas_agent/: __init__.py  advertisement.py  composite.py  errors.py  mcp_server.py  persistence.py  registry.py  resource.py  runner.py  state_machine.py  types.py  validation.py  visualization.py
hateoas-agent/tests/: conftest.py  test_action_centric.py  test_adversarial.py  test_advertisement.py  test_composite.py  test_cross_api_parity.py  test_discovery_mode.py  test_dynamic_tools.py  test_edge_cases.py  test_guards.py  test_integration.py  test_mcp_server.py  test_persistence.py  test_registry.py  test_resource.py  test_runner.py  test_state_machine.py  test_validation.py  test_visualization.py
scripts/: preflight.sh
sigma-mem/: README.md  SESSION-SUMMARY.md  pyproject.toml
sigma-mem/docs/: sigma-comm-protocol.md
sigma-mem/src/sigma_mem/: __init__.py  handlers.py  integrity.py  machine.py  server.py
sigma-mem/tests/: test_handlers.py  test_integrity.py  test_teams.py
stress-test-svb/: config-a-unstructured.md  config-b-superforecasting.md
(+625 files in other folders)
