[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-mem"
version = "0.2.0"
description = "Persistent agent teams that learn across sessions — HATEOAS-navigated memory as an MCP server"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "hateoas-agent>=0.1.0",
    "mcp",
]

[project.scripts]
sigma-mem = "sigma_mem.server:main"

[tool.setuptools.packages.find]
where = ["src"]
